--- a/public/style.css
+++ b/public/style.css
@@ -85,7 +85,7 @@ header > p {
 
 .meme-form > button {
     border: none;
-    font-family: VT323, monospace;
+    font-family: VT323, Helvetica;
     font-size: 25px;
     letter-spacing: 1.5px;
     color: white;
@@ -93,22 +93,22 @@ header > p {
 }
 
 .meme-form > input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  font-family: VT323, monospace;
+  font-family: VT323, Arial;
   font-size: 25px;
   text-align: cen
 }
 .meme-form > input::-moz-placeholder { /* Firefox 19+ */
-  font-family: VT323, monospace;
+  font-family: VT323, Arial;
   font-size: 25px;
   text-align: cen
 }
 .meme-form > input:-ms-input-placeholder { /* IE 10+ */
-  font-family: VT323, monospace;
+  font-family: VT323, Arial;
   font-size: 25px;
   text-align: cen
 }
 .meme-form > input:-moz-placeholder { /* Firefox 18- */
-  font-family: VT323, monospace;
+  font-family: VT323, Arial;
   font-size: 25px;
   text-align: cen
 }
